# Stimply-C

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.c
src/core/: application.c  application.h
src/core/renderer/: renderer.c  renderer.h
src/core/renderer/vulkan/: vulkan_device.c  vulkan_device.h  vulkan_renderer.c  vulkan_renderer.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.h  vulkan_types.inl
